get and create studies
