# src/common/types.ts
@@ -1,16 +1,18 @@
 export type Study = {
-  name: string;
-  studyId: string;
-  organization: string;
   description: string;
+  name: string;
+  organization: string;
+  songId: string;
+  studyId: string;
   submitters: string[];
 };
 
 export type EgoStudyGroup = {
-  name: string;
-  studyId: string;
   id: string;
+  name: string;
+  songId: string;
   status: string;
+  studyId: string;
 };
 
 export type SongStudy = {
@@ -18,6 +20,7 @@ export type SongStudy = {
   studyId: string;
   organization: string;
   description: string;
+  songId: string;
 };
 
 export type EgoUser = {
@@ -43,35 +46,39 @@ export type EgoGetResponse<T> = {
 };
 
 export type CreateStudyReq = {
-  studyId: string;
-  organization: string;
-  name: string;
   description: string;
+  name: string;
+  organization: string;
+  songId: string;
+  studyId: string;
 };
 
 export type AddSubmittersReq = {
+  songId: string;
   studyId: string;
   submitters: string[];
 };
 
 export type RemoveSubmitterReq = {
+  songId: string;
   studyId: string;
   submitter: string;
 };
 
 export enum ServiceErrorType {
-  STUDY_NOT_FOUND = 'STUDY_NOT_FOUND',
-  SUBMITTERS_NOT_FOUND = 'SUBMITTERS_NOT_FOUND',
-  STUDY_ALREADY_EXISTS = 'STUDY_ALREADY_EXISTS',
-  SUBMITTERS_ALREADY_IN_STUDY = 'SUBMITTER_ALREADY_IN_STUDY',
-  SUBMITTER_NOT_IN_STUDY = 'SUBMITTER_NOT_IN_STUDY',
-  FAILED_TO_CREATE_STUDY = 'FAILED_TO_CREATE_STUDY',
-  FAILED_TO_REMOVE_SUBMITTER_FROM_STUDY = 'FAILED_TO_REMOVE_SUBMITTER_FROM_STUDY',
-  FAILED_TO_ADD_SUBMITTERS_TO_STUDY = 'FAILED_TO_ADD_SUBMITTERS_TO_STUDY',
+  STUDY_NOT_FOUND = "STUDY_NOT_FOUND",
+  SUBMITTERS_NOT_FOUND = "SUBMITTERS_NOT_FOUND",
+  STUDY_ALREADY_EXISTS = "STUDY_ALREADY_EXISTS",
+  SONG_ID_NOT_FOUND = "SONG_ID_NOT_FOUND",
+  SUBMITTERS_ALREADY_IN_STUDY = "SUBMITTERS_ALREADY_IN_STUDY",
+  SUBMITTER_NOT_IN_STUDY = "SUBMITTER_NOT_IN_STUDY",
+  FAILED_TO_CREATE_STUDY = "FAILED_TO_CREATE_STUDY",
+  FAILED_TO_REMOVE_SUBMITTER_FROM_STUDY = "FAILED_TO_REMOVE_SUBMITTER_FROM_STUDY",
+  FAILED_TO_ADD_SUBMITTERS_TO_STUDY = "FAILED_TO_ADD_SUBMITTERS_TO_STUDY",
 }
 
 export enum GeneralErrorType {
-  UNAUTHORIZED = 'UNAUTHORIZED',
-  FORBIDDEN = 'FORBIDDEN',
-  UNKNOWN = 'UNKNOWN',
+  UNAUTHORIZED = "UNAUTHORIZED",
+  FORBIDDEN = "FORBIDDEN",
+  UNKNOWN = "UNKNOWN",
 }
