# src/index.ts
@@ -1,15 +1,19 @@
 // dotenv should be first line executed
-require('dotenv').config();
+require("dotenv").config();
 
-import { ForbiddenError, UnauthorizedError } from '@overture-stack/ego-token-middleware';
-import cors from 'cors';
-import express, { NextFunction, Request, Response } from 'express';
-import swaggerUi from 'swagger-ui-express';
-import { ServiceError } from './common/errors';
-import { GeneralErrorType } from './common/types';
-import { SERVER_PORT } from './config';
-import swaggerDocument from './resources/swagger-def.json';
-import studiesRouter from './routes/studies';
+import {
+  ForbiddenError,
+  UnauthorizedError,
+} from "@overture-stack/ego-token-middleware";
+import cors from "cors";
+import express, { NextFunction, Request, Response } from "express";
+import swaggerUi from "swagger-ui-express";
+import { ServiceError } from "./common/errors";
+import { GeneralErrorType } from "./common/types";
+import { env } from "./config";
+import swaggerDocument from "./resources/swagger-def.json";
+import studiesRouter from "./routes/studies";
+import type { SongConfigSchema } from "./config/songConfig";
 
 // *** create and init app ***
 const app = express();
@@ -17,14 +21,14 @@ app.use(cors());
 app.use(express.json());
 
 // *** setup endpoints ***
-app.get('/', (_req: Request, res: Response) => {
-  res.send({ endpoints: { healthCheck: '/health', swaggerUi: '/api-docs' } });
+app.get("/", (_req: Request, res: Response) => {
+  res.send({ endpoints: { healthCheck: "/health", swaggerUi: "/api-docs" } });
 });
-app.get('/health', (_req: Request, res: Response) => {
+app.get("/health", (_req: Request, res: Response) => {
   res.send(true);
 });
-app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
-app.use('/studies', studiesRouter);
+app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+app.use("/studies", studiesRouter);
 
 // *** define error handler ***
 app.use(function (
@@ -37,8 +41,10 @@ app.use(function (
   console.error(err.stack);
 
   if (err instanceof ServiceError) {
-    const { httpStatus, type, studyId, submitters } = err;
-    res.status(httpStatus).json({ success: false, error: { type, studyId, submitters } });
+    const { httpStatus, type, studyId, submitters, songId } = err;
+    res
+      .status(httpStatus)
+      .json({ success: false, error: { type, studyId, songId, submitters } });
   } else if (err instanceof UnauthorizedError) {
     res.status(401).send({
       success: false,
@@ -53,7 +59,7 @@ app.use(function (
     res.status(500).send({
       success: false,
       error: {
-        message: 'Internal Server Error! Reason is unknown!',
+        message: "Internal Server Error! Reason is unknown!",
         type: GeneralErrorType.UNKNOWN,
       },
     });
@@ -61,4 +67,18 @@ app.use(function (
 });
 
 // *** listen on port ***
-app.listen(SERVER_PORT, () => console.log(`App should be running at ${SERVER_PORT}!`));
+app.listen(env.SERVER_PORT, () => {
+  console.log("================ Server Startup ================");
+  console.log(
+    `📡 Listening on            : http://localhost:${env.SERVER_PORT}`
+  );
+  console.log(
+    `📖 Swagger Docs            : http://localhost:${env.SERVER_PORT}/api-docs`
+  );
+  console.log(
+    `🎵 Song servers            : ${env.songConfig.map(
+      (config: SongConfigSchema) => `${config.SONG_URL} (${config.SONG_ID})`
+    )}`
+  );
+  console.log("===============================================");
+});
